Continue prototype development.

--- a/qad-geo-proto/views/home.html
+++ b/qad-geo-proto/views/home.html
@@ -9,8 +9,8 @@
 	    <kendo-drop-down-list
 	        k-scope-field="shipFromDropDown"
 	        k-data-source="dataSources.shipFromSites"
-	        k-data-value-field="'siteCode'"
-            k-data-text-field="'siteCode'"
+	        k-data-value-field="'addressCode'"
+            k-data-text-field="'addressCode'"
 	        k-option-label="'Select a site...'"
 	        >
 	    </kendo-drop-down-list>
