Continue work to make app demoable.

--- a/qad-geo-proto/views/home.html
+++ b/qad-geo-proto/views/home.html
@@ -8,7 +8,7 @@
 	    <label style="text-align: left; width: 130px;">Ship-From Site: </label>
 	    <kendo-drop-down-list
 	        k-scope-field="shipFromDropDown"
-	        k-data-source="dataSources.shipFromSites"
+	        k-data-source="shipFromLocations"
 	        k-data-value-field="'addressCode'"
             k-data-text-field="'addressCode'"
 	        k-option-label="'Select a site...'"
